--- a/todo.txt
+++ b/todo.txt
@@ -2,16 +2,8 @@ physics
     better carpet/buoy collision
 
 sounds
-	music
     moving block sounds last longer than the time to move a block
-	robot moving alone?
-    bouncing off buoys (use clang?)
-    use clang for hitting the wrong target?
-    sea ambience
-    clang sound quieter
-    gate pass/fail are a little out-of-place
     grinding on a carpet is just weird (METAL CARPET)
-    gatePass is too loud
 
 graphics
     better number colours/style
@@ -28,6 +20,8 @@ title screen/level select/instructions
 	- including credit for music 
 		"061013_felix_waves_10m_ecm957_tr003.mp3" 
 		by ermine on freesound.org
+		"jawharp_boing.wav"
+		by plingativator on freesound.org
 level progression
 timing/points (score)
 multiple players
